CAY-1696 Undo/Redo stop working after deleting several project items at once
CAY-1721 Writing blobs fails (Oracle)
CAY-1725 NullPointerException from call to removeToManyTarget
CAY-1804 Serialisation of long[] type was not working correctly. 
CAY-1856 Expression.expWithParameters does not work when parameters are placed in the inline collection 

----------------------------------
Release: 3.0.2
Date: 
----------------------------------

Improvements Since 3.0.1

CAY-1500 MySQL JDBC Batching
CAY-1575 Error generating Embeddable classes in Cayenne Modeler

Bug Fixes Since 3.0.1:

CAY-1403 Method "readNestedProperty" Should Resolve Through Iterative Invocations onto DataObject and Not Complete Within Cayenne.readNestedProperty
CAY-1432 java.io.NotSerializableException when using OSCache for query cache with prefetches and persitent cache. 
CAY-1444 NPE when persisting a newly instatiated object
CAY-1456 Investigate auto-increment columns on DB2 and switch the adapter policy to support them
CAY-1484 Flattened attribute queries are incorrectly generated
CAY-1485 Memory information for about dialog
CAY-1488 OutOfMemory when selecting "Remove Foreign Keys Mapped as Object Attributes"
CAY-1489 NPE using DataContext.objectFromDataRow for a nested context
CAY-1490 Maven cgen: all and datamap modes can not be activated
CAY-1496 Problem in derby: comparison operators are not supported on Clob object values. 
CAY-1503 POST_LOAD is not called on prefetched objects
CAY-1505 Callbacks: POST_UPDATE is called on updated removed object, instead of POST_REMOVE
CAY-1506 Reserverd words mapping in WHERE clause
CAY-1518 cgen: duplicate callback methods
CAY-1557 Vertical inheritance is broken for subclasses with more than one flattened attribute
CAY-1561 Modeler trivial bug NullPointerException on remove
CAY-1567 BaseQueryMetadata.setPrefetches() causes a shared lock
CAY-1578 unicode character types on MS SQL 2008 server aren't recognized.

----------------------------------